--- a/src/components/App/Header/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/App/Header/BurgerMenu/BurgerMenu.module.scss
@@ -60,30 +60,37 @@
   transform: rotate(-45deg);
 }
 
-.menuBurger {
+.menuBurgerField {
   transform: translateX(100%);
   position: fixed;
   top: 0;
   right: 0;
   height: 100%;
   width: 300px;
-  padding: 75px 45px 0 45px;
-  background: white;
   transition: transform 0.3s;
+  display: flex;
+  justify-content: flex-end;
 }
 
 nav li {
   list-style-type: none;
 }
 
-.menuBurger_Active {
+.menuBurgerField_Active {
   transform: translateX(0%);
   position: fixed;
   top: 0;
   right: 0;
   height: 100%;
-  width: 300px;
+  width: 100%;
+  transition: transform 0.3s;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.menuBurger{
   padding: 75px 45px 0 45px;
   background: white;
-  transition: transform 0.3s;
+  height: 100%;
+  width: 300px;
 }
