--- a/src/components/App/Main/HomePage/SerchSection/SerchSection.module.scss
+++ b/src/components/App/Main/HomePage/SerchSection/SerchSection.module.scss
@@ -3,3 +3,20 @@
         width: 500px;
     }
 }
+.subSearch{
+    width: 100%;
+    max-height: 200px;
+    opacity: 1;
+    background-color: red;
+    overflow-y: scroll;
+}
+.subSearch ul{
+    list-style: none;
+}
+.subSearchHidden{
+    width: 100%;
+    max-height: 200px;
+    opacity: 0;
+    background-color: red;
+    overflow: scroll; 
+}
