--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
 }
 
+
 /* Убираем внутренние отступы */
 ul[class],
 ol[class] {
@@ -35,6 +36,7 @@ body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  overflow-y: auto;
 }
 
 /* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
