switch SubWords in search

--- a/src/components/common/SerchSection/SerchSection.module.scss
+++ b/src/components/common/SerchSection/SerchSection.module.scss
@@ -20,3 +20,9 @@
     background-color: red;
     overflow: scroll; 
 }
+.isActiveSub{
+    display: block;
+}
+.unActiveSub{
+    display: none;
+}
